--- a/projecto_failai/src/html/Dashboard.html
+++ b/projecto_failai/src/html/Dashboard.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Adminpanel</title>
 </head>
 <body>
-$END$
+<h1>Welcome, {{username}}!</h1>
+<span>Userio tipas: {{userType}}</span> {{loggedInDate}}
+<hr>
+<a href="index.php?logout=true">Logout</a>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aliquid amet aperiam earum eos esse explicabo harum
+illo incidunt iusto minima molestiae nihil omnis perferendis quaerat quas temporibus veniam voluptatibus?
 </body>
 </html>
